--- a/public/profile.css
+++ b/public/profile.css
@@ -5,6 +5,12 @@ body{
     justify-content: center;
     align-items: center;
     background-color: #FFFBFE;
+    transition: 1s;
+    overflow: scroll;
+}
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
 }
 .main-profile-bg {
     display: flex;
@@ -61,6 +67,7 @@ body{
     margin-top: 1.2vh;
     margin-bottom: 90px;
     height: 5vh;
+    border-radius: 15px;
 }
 #lower-desc-text {
     font-size: 1.3vw;
@@ -74,8 +81,10 @@ body{
 }
 .project-container-title-div {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
+    height:10vh;
+    width:90vw;
     height: 10%;
 }
 .projects-container {
@@ -103,4 +112,18 @@ body{
     height: 20px;
     background-color: aquamarine;
     border-radius: 30px;
+}
+
+#testing {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:400px;
+    height: 500px;
+    /* background-color: Red; */
+}
+#test-text {
+    text-align: center;
+    width:100%;
+    height: 100%;
 }
