--- a/public/profile.css
+++ b/public/profile.css
@@ -1,4 +1,6 @@
-
+html {
+    scroll-behavior: smooth;
+  }
 body{
     display: flex;
     flex-direction: column;
@@ -7,6 +9,7 @@ body{
     background-color: #FFFBFE;
     transition: 1s;
     overflow: scroll;
+    /* scroll-behavior: smooth; */
 }
 ::-webkit-scrollbar {
     width: 0;  /* Remove scrollbar space */
@@ -76,11 +79,11 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 90%;
     height: 60vh;
     margin-bottom: 50vh;
     /* overflow-y: scroll; */
-    flex-direction: column;
+    flex-direction: row;
 }
 .project-container-title-div {
     display: flex;
@@ -95,42 +98,54 @@ body{
     flex-direction: column;
     height:100%;
     width: 100%;
+    position: relative;
     overflow-y: scroll;
 }
 #project-text {
-    font-size: 3.5vw;
-    color: #D0CFCF;
+    font-size: 5vw;
+    color: #A9ACA9;
 }
 .projects-container {
     display: flex;
     flex-direction: row;
     height: 100%;
     width:100%;
+    margin:1vw;
+    margin-top:10vh;
+    padding-bottom: 20px;
     /* height: 90vh; */
 }
 .project-image-div {
     /* width: 10vw; */
     width:100%;
     height:100%;
-    overflow: hidden;
+    margin-right:5vw;
+    /* overflow: auto; */
+    object-fit: contain;
 }
 #project-image {
     width:45vw;
 }
-.project-description {
+.project-description-div {
     display:flex;
     flex-direction: column;
     width: 100%;
     height:100%;
-    /* width: 10vw; */
 }
-.calset-login-btn {
+/* .calset-login-btn {
     width:30%;
     height: 20px;
     background-color: aquamarine;
     border-radius: 30px;
+} */
+.project-title-name {
+    color:#A9ACA9;
+    font-size: 5vh;
 }
-
+.project-description {
+    color:#A9ACA9;
+    font-size: 2vh;
+}
 #testing {
     display: flex;
     justify-content: center;
