--- a/public/profile.css
+++ b/public/profile.css
@@ -80,7 +80,7 @@ body{
     justify-content: center;
     align-items: center;
     width: 90%;
-    height: 60vh;
+    height: 48vh;
     margin-bottom: 50vh;
     /* overflow-y: scroll; */
     flex-direction: row;
@@ -93,12 +93,21 @@ body{
     width:90vw;
     height: 10%;
 }
+.scroll-btns-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-right:5vw;
+}
 .projects-scrolling-div {
     display: flex;
     flex-direction: column;
     height:100%;
     width: 100%;
     position: relative;
+    scroll-behavior: smooth;
     overflow-y: scroll;
 }
 #project-text {
@@ -110,9 +119,8 @@ body{
     flex-direction: row;
     height: 100%;
     width:100%;
-    margin:1vw;
-    margin-top:10vh;
-    padding-bottom: 20px;
+    margin-bottom: 5vh;
+    /* padding-bottom: 20px; */
     /* height: 90vh; */
 }
 .project-image-div {
